--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
   "name": "rentalsunited",
-  "version": "1.0.5",
-  "description": "Rentals United soap api plugin.",
+  "version": "1.0.26",
+  "description": "",
   "main": "index.js",
   "scripts": {},
+  "keywords": [
+    "RentalsUnited",
+    "Rentals",
+    "United",
+    "nodejs"
+  ],
   "author": "Paulo Santos <tm.paulo.santos@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^0.18.0"
+  },
+  "repository": { 
+    "type": "git",
+    "url": "https://github.com/PauloSantosWebmax/rentalsunited"
+  }
 }
